--- a/src/Common.Api/Common.Api.csproj
+++ b/src/Common.Api/Common.Api.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
 				<RootNamespace>Ulearn.Common.Api</RootNamespace>
+				<TargetFrameworks>net47;netcoreapp2.2</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
