--- a/src/Metrics/Metrics.csproj
+++ b/src/Metrics/Metrics.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net47;netstandard2.0;netcoreapp2.2</TargetFrameworks>
+    <TargetFrameworks>net47;netcoreapp2.2</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
