--- a/src/Stepik.Api.Tests/packages.config
+++ b/src/Stepik.Api.Tests/packages.config
@@ -8,5 +8,11 @@
   <package id="NHttp" version="0.1.9.0" targetFramework="net47" />
   <package id="NUnit" version="3.10.1" targetFramework="net47" />
   <package id="RestSharp" version="105.2.3" targetFramework="net47" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
 </packages>
