--- a/src/VideoAnnotations.Api/VideoAnnotations.Api.csproj
+++ b/src/VideoAnnotations.Api/VideoAnnotations.Api.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
 				<RootNamespace>Ulearn.VideoAnnotations.Api</RootNamespace>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFrameworks>net47;netcoreapp2.2</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
