--- a/src/Notifications/sender.xml.example
+++ b/src/Notifications/sender.xml.example
@@ -2,6 +2,7 @@
 <sender>
     <email>andgein@yandex.ru</email>
     <email>andgein+2@yandex.ru</email>
+    <courseId>BasicProgramming</courseId>
     <subject>Test email</subject>
     <text>
         Hello everybody!
