--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -774,6 +774,10 @@
     <Compile Include="Migrations\201905241421585_AddCourseGitBranchField.Designer.cs">
       <DependentUpon>201905241421585_AddCourseGitBranchField.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201907250812064_UpdateUserRoles.cs" />
+    <Compile Include="Migrations\201907250812064_UpdateUserRoles.Designer.cs">
+      <DependentUpon>201907250812064_UpdateUserRoles.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -1215,6 +1219,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905241421585_AddCourseGitBranchField.resx">
       <DependentUpon>201905241421585_AddCourseGitBranchField.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201907250812064_UpdateUserRoles.resx">
+      <DependentUpon>201907250812064_UpdateUserRoles.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
