--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -240,6 +240,10 @@
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
+				<assemblyIdentity name="System.Threading.Tasks.Dataflow" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.6.4.0" newVersion="4.6.4.0" />
+			</dependentAssembly>
+			<dependentAssembly>
 				<assemblyIdentity name="System.Collections" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-1.2.1.0" newVersion="1.2.1.0" />
 			</dependentAssembly>
