--- a/src/Common.Api.Application/Common.Api.Application.csproj
+++ b/src/Common.Api.Application/Common.Api.Application.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.1.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="5.0.2" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="5.2.1" />
 		<PackageReference Include="Vostok.Hosting" Version="1.0.0-beta000055" />
 		<PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="1.0.0-beta000031" />
 		<PackageReference Include="Vostok.Logging.Serilog">
