--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -858,5 +858,8 @@
     <EmbeddedResource Update="Migrations\202003101304581_AddSandboxToUserExerciseSubmission.resx">
       <DependentUpon>202003101304581_AddSandboxToUserExerciseSubmission.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Update="Migrations\202004020908004_AddIndexToNotificationDeliveryByTransportAndCreateTimeIncludeNotificationId.resx">
+      <DependentUpon>202004020908004_AddIndexToNotificationDeliveryByTransportAndCreateTimeIncludeNotificationId.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
