--- a/src/Common.Api/Common.Api.csproj
+++ b/src/Common.Api/Common.Api.csproj
@@ -10,6 +10,8 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0" />
 	  <PackageReference Include="Serilog" Version="2.9.0" />
 	  <PackageReference Include="Vostok.Context" Version="0.1.3" />
+	  <PackageReference Include="Vostok.Logging.Serilog" Version="1.0.2" />
+	  <PackageReference Include="Vostok.Telemetry.Kontur" Version="1.0.39" />
 	  <PackageReference Include="Vostok.Tracing.Abstractions" Version="0.1.2" />
 	</ItemGroup>
 
