--- a/src/Common.Api.Application/Common.Api.Application.csproj
+++ b/src/Common.Api.Application/Common.Api.Application.csproj
@@ -19,8 +19,10 @@
 		<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="5.2.1" />
 		<PackageReference Include="Vostok.Applications.AspNetCore" Version="0.1.11" />
 		<PackageReference Include="Vostok.Configuration" Version="0.1.14" />
+		<PackageReference Include="Vostok.Datacenters.Kontur" Version="1.0.36" />
 		<PackageReference Include="Vostok.Hosting" Version="0.1.10" />
 		<PackageReference Include="Vostok.Logging.Serilog" Version="1.0.2" />
+		<PackageReference Include="Vostok.Telemetry.Kontur" Version="1.0.39" />
 	</ItemGroup>
 
 	<ItemGroup>
