--- a/src/Common.Api.Application/Common.Api.Application.csproj
+++ b/src/Common.Api.Application/Common.Api.Application.csproj
@@ -23,6 +23,7 @@
 		<PackageReference Include="Vostok.Hosting" Version="0.1.10" />
 		<PackageReference Include="Vostok.Logging.Serilog" Version="1.0.2" />
 		<PackageReference Include="Vostok.Telemetry.Kontur" Version="1.0.39" />
+		<PackageReference Include="Vostok.Tracing.Kontur" Version="1.0.14" />
 	</ItemGroup>
 
 	<ItemGroup>
